Z-index issue

--- a/src/ng-quick-date.styl
+++ b/src/ng-quick-date.styl
@@ -10,6 +10,7 @@ error-color = #DD3B30
     display inline
 
 .quickdate-popup
+  z-index 10
   background-color #fff
   border solid 1px #000
   text-align center
